fix(header): align slots (#160)
* fix(header): aligning slot names and prop names

* docs(header): updated stories after slot/prop renaming

* corrected prop name in story

* removed double slot docs


---------

--- a/core/src/components/header/header-dropdown-list-user/header-dropdown-list-user.scss
+++ b/core/src/components/header/header-dropdown-list-user/header-dropdown-list-user.scss
@@ -13,7 +13,7 @@
   }
 
   img,
-  slot[name='image']::slotted(*) {
+  slot[name='thumbnail']::slotted(*) {
     width: 34px;
     border-radius: 100%;
   }
